update van cafe by catur

--- a/style.css
+++ b/style.css
@@ -84,6 +84,168 @@ body {
   display: none;
 }
 
+/* navbar search form */
+.navbar .search-form {
+  position: absolute;
+  top: 100%;
+  right: 7%;
+  background-color: #fff;
+  width: 50rem;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
+}
+
+.navbar .search-form.active{
+  transform: scaleY(1);
+}
+
+.navbar .search-form input{
+  height: 100%;
+  width: 100%;
+  font-size: 1.6rem;
+  color: var(--bg);
+  padding: 1rem;
+}
+
+.navbar .search-form label{
+  cursor: pointer;
+  font-size: 2rem;
+  margin-right: 1.5rem;
+  color: var(--bg);
+}
+
+/* Shopping cart */
+#shopping-cart-button{
+  position: relative;
+}
+
+#shopping-cart-button .quantity-badge {
+  display: inline-block;
+  padding: 1px 5px;
+  background-color: red;
+  border-radius: 50%;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 0;
+  right: -10px;
+}
+.shopping-cart{
+  position: absolute;
+  top: 100%;
+  right: -100%;
+  height: 100vh;
+  width: 35rem;
+  padding: 0 1.5rem;
+  background-color: #fff;
+  color: var(--bg);
+  transition: 0.3s;
+}
+
+.shopping-cart.active{
+  right: 0;
+}
+
+.shopping-cart .cart-item{
+  margin: 2rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px dashed #666;
+  position: relative;
+}
+
+.shopping-cart img{
+  height: 4rem;
+  border-radius: 50%;
+}
+
+.shopping-cart h3{
+  font-size: 1.4rem;
+}
+
+.shopping-cart .item-price {
+  font-size: 1.2rem;
+}
+
+.shopping-cart .cart-item #add,
+.shopping-cart .cart-item #remove{
+  display: inline-block;
+  padding: 2px 5px;
+  cursor: pointer;
+  margin: 0 8px;
+  background-color: #010101;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.shopping-cart h4{
+  font-size: 1.6rem;
+  margin-top: -1rem;
+  text-align: center;
+}
+
+/* checkout form */
+.form-container{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  border-top: 1px dashed black;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.form-container h5{
+  text-align: center;
+  font-size: 1rem;
+}
+
+.form-container form{
+  width: 100%;
+  text-align: center;
+}
+
+.form-container label{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 1rem 0;
+}
+
+.form-container span {
+  text-align: right;
+}
+
+.form-container input{
+  background-color: #ddd;
+  padding: 5px;
+  font-size: 1rem;
+  width: 70%;
+}
+
+.form-container .checkout-button{
+  padding: 6px 14px;
+  background-color: royalblue;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 20px;
+  margin: 1rem auto;
+  cursor: pointer;
+}
+
+.form-container .checkout-button.disabled{
+  background-color: #999;
+  cursor: not-allowed;
+
+}
+
 /* hero section */
 .hero {
   min-height: 100vh;
@@ -94,9 +256,10 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
+  mask-image: linear-gradient(rgba(0,0,0,1) 70%, rgba(0,0,0,0));
 }
 
-.hero::after {
+/* .hero::after {
   content: "";
   display: block;
   position: absolute;
@@ -108,11 +271,15 @@ body {
     rgba(1, 1, 3, 1) 8%,
     rgba(255, 255, 255, 0) 50%
   );
-}
+} */
 
 .hero .content {
   padding: 1.4rem 7%;
-  max-width: 60rem;
+  /* max-width: 60rem; */
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top: 200px;
 }
 
 .hero .content h1 {
@@ -149,12 +316,14 @@ body {
 /* about section */
 .about,
 .menu,
+.products,
 .contact {
   padding: 8rem 7% 1.4rem;
 }
 
 .about h2,
 .menu h2,
+.products h2,
 .contact h2 {
   text-align: center;
   font-size: 2.5rem;
@@ -163,6 +332,7 @@ body {
 
 .about h2 span,
 .menu h2 span,
+.products h2 span,
 .contact h2 span {
   color: var(--primary);
 }
@@ -201,6 +371,7 @@ body {
   margin-bottom: 1rem;
 }
 .menu p,
+.products p,
 .contact p {
   text-align: center;
   max-width: 30rem;
@@ -230,6 +401,68 @@ body {
 .menu .row .menu-card-title {
   margin-top: 1rem auto 0.5rem;
 }
+
+/* Product section start */
+.products .row{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+  margin-top: 4rem;
+}
+
+.products .product-card{
+  text-align: center;
+  border: 1px solid #666;
+  padding: 2rem;
+
+}
+.products .product-icons{
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.products .product-icons a{
+  width: 4rem;
+  height: 4rem;
+  color: #fff;
+  margin: 0.3rem;
+  border: 1px solid #666;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.products .product-icons a:hover{
+  background-color: var(--primary);
+  border: 1px solid var(--primary);
+}
+
+.products .product-image img{
+  height: 25rem;
+}
+
+.products .product-content h3{
+  font-size: 2rem;
+}
+
+.products .product-stars{
+  font-size: 1.7rem;
+  padding: 0.8rem;
+  color: var(--primary);
+}
+.products .product-stars .star-full{
+  fill: var(--primary);
+}
+
+.products .product-price{
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+
+/* Product section end */
 
 /* contact section */
 .contact .row {
@@ -317,6 +550,75 @@ footer .credit a {
   font-weight: 700;
 }
 
+/* modal box */
+/* Item detail */
+
+.modal{
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-container {
+  position: relative;
+  background-color: #fefefe;
+  color: var(--bg);
+  margin: 15% auto;
+  padding: 1.2rem;
+  border: 1px solid #666;
+  width: 80%;
+  animation: animateModal 0.5s;
+}
+
+@keyframes animateModal {
+  from{
+    top: -300px;
+    opacity: 0;
+  }
+  to{
+    top: 0;
+    opacity: 1;
+  }
+}
+
+.modal-container .close-icon{
+  position: absolute;
+  right: 1rem;
+}
+
+.modal-content{
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.modal-content img{
+  height: 20rem;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+}
+
+.modal-content p{
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+  margin-top: 1.2rem;
+}
+
+.modal-content a{
+  display: flex;
+  gap: 1rem;
+  width: 12rem;
+  background-color: var(--primary);
+  color: #fff;
+  margin-top: 1rem;
+  padding: 1rem 1.6rem;
+}
+
+
 /* Media Queries */
 
 /* Laptop */
@@ -364,6 +666,11 @@ footer .credit a {
     transform: scaleX(0.2);
   }
 
+  .navbar .search-form{
+    width: 90%;
+    right: 2rem;
+  }
+
   .about .row {
     flex-wrap: wrap;
   }
@@ -402,7 +709,12 @@ footer .credit a {
   .contact .row form {
     padding-top: 0;
   }
+
+  .modal-content{
+    flex-wrap: wrap;
+  }
 }
+
 
 /* Mobile */
 @media (max-width: 450px) {
